Fix minor css components issues

--- a/core/component_geolocation/css/component_geolocation.less
+++ b/core/component_geolocation/css/component_geolocation.less
@@ -1,8 +1,8 @@
 // Variables
-@common_css: "../../common/css";
+// @common_css: "../../common/css";
 
 // Usage
-@import "@{common_css}/library.less";
+// @import "@{common_css}/library.less";
 
 
 //@elements_over_z_index : 1000;
@@ -111,6 +111,7 @@
 		}
 
 
+
 /* PLAYER container (Transcription)
 -------------------------------------------------- */
 	.leaflet_map_player {
@@ -153,7 +154,7 @@
 	.wrapper_component.component_geolocation {
 
 		>.content_data {
-			height: calc(100% - 2em);
+			
 
 			// inputs container
 			ul.inputs_container {
