--- a/core/page/css/layout/vars.less
+++ b/core/page/css/layout/vars.less
@@ -23,7 +23,9 @@
 
 
 // General sizes
-	@media_max_height : 27em; // Max height for a component wrapper of media (av, image, pdf...)
+	@media_min_height : 27em; // Min height for a component wrapper of media (av, image, pdf...)
+	@media_max_height : inherit; // Max height for a component wrapper of media (av, image, pdf...)
+	
 
 
 
