--- a/tools/tool_lang/css/tool_lang.less
+++ b/tools/tool_lang/css/tool_lang.less
@@ -1,16 +1,9 @@
 
 
 
-// wrapper_tool
-	.wrapper_tool.tool_lang {
-		padding-right: 1em;
 
-	}
-
-
-
-// select style
-	.select_style {
+// custom_select_style. Apply different select appearance
+	.custom_select_style {
 		width: fit-content;
 		height: 2em;
 		font-size: 0.80em;
@@ -18,53 +11,66 @@
 
 
 
-// components_container
-	.components_container {
-		display: grid;
-	    grid-template-columns: 1fr 1fr;
-	    grid-gap: 1em;
-	    //background-color: #D6F737;
+// wrapper_tool
+	.wrapper_tool.tool_lang {
+		padding-right: 1em;
 
-	    >select {
-			.select_style;
-	    }
+		>.content_data {
 
-	    >div {
+			// components_container
+			.components_container {
+				display: grid;
+			    grid-template-columns: 1fr 1fr;
+			    grid-gap: 1em;
+			    //background-color: #D6F737;
 
-	    }
-	}
+				>select {
+					.custom_select_style;
 
+					&.source_lang {}
+					&.target_lang {}
+				}
 
+				
+				>.source_component_container {
 
-// buttons_container
-	.buttons_container {
-		padding-top: 1em;
-		padding-bottom: 1em;
-	}
+				}
+				>.target_component_container {
 
+				}
+				
+				>.buttons_container {
+					padding-top: 1em;
+					padding-bottom: 1em;
 
+					// automatic_translation_container
+					>.automatic_translation_container {
+						position: relative;
+						display: flex;
 
-// automatic_translation_container
-	.automatic_translation_container {
-		position: relative;
+						>button {
+							// .select_style;
+							// font-size: .9em;
+							// background-color: #a6a6a6;
+							// border-radius: 0.30em;
+							// cursor: pointer;
+							// color: #ffff;
+							// border: none;
+							// padding-left: 0.75em;
+							// padding-right: 0.75em;
+						}
 
-		>button {
-			// .select_style;
-			// font-size: .9em;
-			// background-color: #a6a6a6;
-			// border-radius: 0.30em;
-			// cursor: pointer;
-			// color: #ffff;
-			// border: none;
-			// padding-left: 0.75em;
-			// padding-right: 0.75em;
+						>select {
+							margin-left: 0.75em;							
+							width: fit-content;
+							height: 2.75em;
+							font-size: 0.80em;
+						}
+					}
+				}
+			}
 		}
 
-		>select {
-			margin-left: 0.75em;
-			// .select_style;
-			width: fit-content;
-			height: 2.75em;
-			font-size: 0.80em;
-		}
-	}
+	}//end .wrapper_tool.tool_lang
+
+
