--- a/core/page/css/layout/vars.less
+++ b/core/page/css/layout/vars.less
@@ -25,6 +25,8 @@
 // General sizes
 	@media_min_height : 27em; // Min height for a component wrapper of media (av, image, pdf...)
 	@media_max_height : inherit; // Max height for a component wrapper of media (av, image, pdf...)
+
+	@component_label_height : 1.75em;
 	
 
 
