--- a/core/inspector/css/inspector.less
+++ b/core/inspector/css/inspector.less
@@ -1,8 +1,10 @@
 // Variables
-@common_css: "../../common/css";
+// @common_css: "../../common/css";
 
 // Usage
-@import "@{common_css}/library.less";
+// @import "@{common_css}/library.less";
+
+
 
 // inspector
 	.wrapper_inspector {
@@ -22,6 +24,70 @@
 			top: 0px;
 			width: 18.5% !important;
 		}
+
+		// inspector_div_content
+		>.inspector_content_data {
+			position: relative;
+			display: block;
+			margin: 0;
+			padding: 0;
+
+			>* {
+				border-bottom: 1px solid #eeeeee;
+			}
+
+			>.paginator_container {
+				.content_data.paginator {
+					flex-wrap: wrap;
+					>div {
+						flex: 1 0 100%;
+					}
+				}
+			}
+
+
+			.wrapper_component {
+				padding: 1em;
+
+				>.label {
+
+				}
+				>.content_data {
+					padding-top: 1em;
+				}
+			}
+
+			
+			select {
+				width: 87px;
+			}
+
+			.key, .value {
+				line-height: 1em;
+				margin-bottom: 1px;
+				padding: 2px;
+			}
+			.key {
+				display: block;
+				min-width: 60px;
+				background-color: #eee;
+				margin-right: 0;
+				text-align: right;
+				border-radius: 2px;
+				clear: left;
+				float: left;
+			}
+			.value {
+				margin-left: 2px;
+			    max-height: 300px;
+			    text-overflow: ellipsis;
+			    overflow: hidden;
+			    word-break: break-all;
+			    float: left;
+			    margin-left: 2px;
+			}
+		}
+
 
 		.css_section_group_content {
 			display: table;
@@ -49,76 +115,7 @@
 
 
 
-// inspector_div_content
-	.inspector_content_data {
-		position: relative;
-		display: block;
-		margin: 0;
-		padding: 0;
 
-		>* {
-			border-bottom: 1px solid #eeeeee;
-		}
-
-		//padding-top: 0.5em;
-		//padding-bottom: 0.5em;
-
-		//color: #999999;
-		//font-family: Arial, Helvetica, sans-serif;
-		//box-shadow: inset 0px -2px 3px rgb(220, 220, 220);
-		//width: 100%;
-
-		//background-color: #F9F9F9;
-		//background-color: rgba(249, 249, 249, 0.82);
-
-		//max-height: 280px;
-		//overflow: auto;
-
-		.wrapper_component {
-			padding: 1em;
-
-			>.label {
-
-			}
-
-			>.content_data {
-				padding-top: 1em;
-			}
-		}
-
-		@media screen and (max-width: @movil_max_width) { // 768px
-			box-shadow: none;
-		}
-
-		select {
-			width: 87px;
-		}
-
-		.key, .value {
-			line-height: 1em;
-			margin-bottom: 1px;
-			padding: 2px;
-		}
-		.key {
-			display: block;
-			min-width: 60px;
-			background-color: #eee;
-			margin-right: 0;
-			text-align: right;
-			border-radius: 2px;
-			clear: left;
-			float: left;
-		}
-		.value {
-			margin-left: 2px;
-		    max-height: 300px;
-		    text-overflow: ellipsis;
-		    overflow: hidden;
-		    word-break: break-all;
-		    float: left;
-		    margin-left: 2px;
-		}
-	}
 
 
 
