CSS minor changes

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1165,6 +1165,14 @@
 
 
 		&.list {
+			&.component_text_area {
+				// background-color: #bc00ae;
+				max-height: 10em;
+				overflow: hidden;
+				img {
+					height: 16px;
+				}
+			}
 
 			&.component_image, &.component_av, &.component_svg {
 				padding: 0;
