CSS minos fixes for section list

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1215,9 +1215,9 @@
 			outline: 1px solid rgba(216, 216, 216, 0.43);
 
 			>* {
-				&:not(mark) {
-					padding: 1em;
-				}
+				// &:not(mark):not(img) {
+				// 	padding: 1em;
+				// }
 
 				&.paginator {
 					padding: 0;
@@ -1228,6 +1228,7 @@
     				}
 				}
 			}
+			
 
 			>.label {
 				// background-color: #FEDACF;
