CSS various minor updates and changes

--- a/core/area_thesaurus/css/area_thesaurus.css
+++ b/core/area_thesaurus/css/area_thesaurus.css
@@ -1,240 +1,1 @@
-/*
-
- Only use to set general thesaurus styles, not dinamic rows
- Specific CSS for ts_object must be writed in ts_object.less
-
-*/
-/* WRAPPER : AREA_THESAURUS
------------------------------------------------- */
-.area_thesaurus {
-  font-family: Arial, sans-serif;
-}
-.area_thesaurus > ul {
-  padding: 25px;
-  padding-top: 10px;
-  background-color: rgba(255, 255, 255, 0.84);
-  margin: 20px;
-  margin-top: 0;
-  border-radius: 5px;
-}
-/* typology_name like 'Toponomy'
-		------------------------------------------------ */
-.area_thesaurus .typology_name {
-  background-color: rgba(230, 230, 230, 0.88);
-  padding: 7px;
-  padding-bottom: 5px;
-  text-transform: uppercase;
-  border-bottom: 1px solid white;
-  font-size: 1.1em;
-  color: #636363;
-  min-height: 31px;
-  cursor: pointer;
-}
-.area_thesaurus .typology_name:hover {
-  background-color: #E0E0E0;
-}
-.area_thesaurus .typology_name:active {
-  background-color: #BBBBBB;
-  color: #ffffff;
-}
-.typology_hide {
-  background: transparent url(../../themes/default/drop-down-arrow.png) no-repeat right center;
-  background-size: 12px;
-  background-position: right 10px center;
-  opacity: 0.5;
-}
-.area_thesaurus .typology_name_model {
-  background-color: #f59e3d;
-  color: white;
-}
-.area_thesaurus .typology_name_model:before {
-  content: " [M]";
-}
-/* HIERARCHY_NAME like 'España'
-		------------------------------------------------ */
-/*
-		.area_thesaurus .elements_container .list_thesaurus_element.hierarchy_name {
-			width: 100%;				
-			//padding: 7px;
-			//background-color: #727272;
-			//padding-left: 10px;
-			//font-size: 1.15em;
-			text-align: left;
-			//color: #333333;
-			border: none;
-			//border-bottom: 1px solid #ebebeb;
-			font-weight: bold;
-			opacity: 1;
-			text-transform: uppercase;
-			padding-left: 0;
-			}
-			.area_thesaurus .elements_container .list_thesaurus_element.hierarchy_name:hover {
-				cursor: default;
-				color: inherit;
-			}
-			.area_thesaurus .elements_container .hierarchy_name .ts_object_add {
-				display: inline-block;
-				position: relative;
-				top: 5px;
-				left: 4px;
-			}
-			*/
-/* HIERARCHY_ROOT_NODE Container (children container)
-		------------------------------------------------ */
-.area_thesaurus .hierarchy_root_node > .children_container {
-  margin: 0;
-  padding: 0;
-}
-/* ID_COLUMN_CONTENT
-			------------------------------------------------ */
-.area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .id_column_content > .ts_object_drag {
-  display: none;
-}
-.area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .id_column_content > .ts_object_delete {
-  display: none;
-}
-/* ELEMENTS_CONTAINER
-			------------------------------------------------ */
-.area_thesaurus .hierarchy_root_node > .elements_container {
-  display: none;
-}
-/* HIERARCHY_NAME like 'España'
-				------------------------------------------------ */
-.area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .elements_container > .list_thesaurus_element {
-  text-align: left;
-  border: none;
-  font-weight: bold;
-  opacity: 1;
-  text-transform: uppercase;
-  padding-left: 0;
-}
-.area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .elements_container > .list_thesaurus_element:hover {
-  color: inherit;
-}
-/* SEARCH FORM
-	------------------------------------------------ 		
-	.search_form_container {
-		//background-color: #A6E1A2;
-		padding: 10px;
-		padding-top: 5px;
-		width: 100%;
-		}
-		.search_form_container .wrap_component {
-			//background-color: #EED31D;
-			float: left;
-			width: 25%;
-			}
-			.search_form_container .wrap_component .css_label {
-				width: 50%;
-				vertical-align: middle;
-			}
-			.search_form_container .wrap_component .content_data {
-				width: 50%;
-			}
-			.search_form_container .wrap_component .input_css_section_id {
-				width: 70px;
-			}
-			.search_form_container .wrap_component .css_input_text_search {
-				width: 100%;
-			}
-
-		.search_form_container hr {
-			display: none;
-		}*/
-.search_form_container {
-  margin: 0;
-  margin-left: 40px;
-  margin-right: 40px;
-  margin-top: 10px;
-}
-/* BETA
-	------------------------------------------------ */
-.beta {
-  color: #EE8D09;
-  position: absolute;
-  right: 25px;
-  margin-top: 5px;
-  font-weight: bold;
-}
-/* COMPONENT OVERWRITE CSS
-	------------------------------------------------ */
-.reset_wrap {
-  width: inherit;
-  border: none;
-  height: initial;
-}
-.reset_label {
-  width: initial;
-  padding-top: 5px;
-}
-.reset_content_data {
-  display: inline-block;
-  width: auto;
-  min-width: 30%;
-}
-.wrap_ts_object {
-  /*
-			// Related terms standar
-			.wrap_component_hierarchy35 {
-				.reset_wrap;
-				}
-				.wrap_component_hierarchy35 label {
-					.reset_label;
-				}
-				.wrap_component_hierarchy35 .content_data {
-					.reset_content_data;
-				}
-			// Children
-			.wrap_component_muvaet274 {
-
-				}
-			*/
-}
-.wrap_ts_object > .wrap_component {
-  width: inherit;
-  border: none;
-  height: initial;
-}
-.wrap_ts_object > .wrap_component label {
-  width: initial;
-  padding-top: 5px;
-}
-.wrap_ts_object > .wrap_component .content_data {
-  display: inline-block;
-  width: auto;
-  min-width: 30%;
-}
-.wrap_ts_object > .wrap_component .content_data .button_add {
-  top: 4px;
-}
-.wrap_ts_object > .wrap_component .content_data .css_input_text {
-  min-width: 260px;
-}
-#submit_group {
-  clear: both;
-  padding-top: 10px;
-}
-#hierarchy_selector {
-  margin-top: 5px;
-}
-span.label_hierarchy_selector {
-  min-width: initial;
-  padding: 7px;
-  padding-right: 30px;
-  padding-top: 10px;
-}
-.css_operator_select {
-  padding: 2px;
-  cursor: pointer;
-  clear: both;
-  width: 100%;
-  margin: 0;
-}
-.css_wrap_max_rows {
-  width: 12%;
-}
-.section_buttons_container {
-  margin-right: 45px;
-  padding-top: 3px;
-}
-/*# sourceMappingURL=area_thesaurus.css.map */
+.wrapper_area{font-family:Arial,sans-serif;font-size:1em}.wrapper_area>.content_data>ul{background-color:rgba(255,255,255,.84);width:100%;height:100%;padding:25px;padding-top:10px;margin:20px;margin-left:0;margin-top:0;border-radius:5px}.wrapper_area>.content_data>ul>li>.typology_name{background-color:rgba(230,230,230,.88);text-transform:uppercase;padding:.5em;margin-bottom:.25em;margin-top:.25em;font-size:1em;line-height:1em;color:#636363;cursor:pointer}.wrapper_area>.content_data>ul>li>.typology_name:hover{background-color:#E0E0E0}.wrapper_area>.content_data>ul>li>.typology_name:active{background-color:#BBB;color:#fff}.typology_hide{background:transparent url(../../themes/default/drop-down-arrow.png) no-repeat right center;background-size:12px;background-position:right 10px center;opacity:.5}.area_thesaurus .typology_name_model{background-color:#f59e3d;color:#fff}.area_thesaurus .typology_name_model:before{content:" [M]"}.area_thesaurus .hierarchy_root_node>.children_container{margin:0;padding:0}.area_thesaurus .hierarchy_root_node>.children_container>.wrap_ts_object>.id_column_content>.ts_object_drag{display:none}.area_thesaurus .hierarchy_root_node>.children_container>.wrap_ts_object>.id_column_content>.ts_object_delete{display:none}.area_thesaurus .hierarchy_root_node>.elements_container{display:none}.area_thesaurus .hierarchy_root_node>.children_container>.wrap_ts_object>.elements_container>.list_thesaurus_element{text-align:left;border:none;font-weight:700;opacity:1;text-transform:uppercase;padding-left:0}.area_thesaurus .hierarchy_root_node>.children_container>.wrap_ts_object>.elements_container>.list_thesaurus_element:hover{color:inherit}.search_form_container{margin:0;margin-left:40px;margin-right:40px;margin-top:10px}.beta{color:#EE8D09;position:absolute;right:25px;margin-top:5px;font-weight:700}.reset_wrap{width:inherit;border:none;height:initial}.reset_label{width:initial;padding-top:5px}.reset_content_data{display:inline-block;width:auto;min-width:30%}.wrap_ts_object>.wrap_component{width:inherit;border:none;height:initial}.wrap_ts_object>.wrap_component label{width:initial;padding-top:5px}.wrap_ts_object>.wrap_component .content_data{display:inline-block;width:auto;min-width:30%}.wrap_ts_object>.wrap_component .content_data .button_add{top:4px}.wrap_ts_object>.wrap_component .content_data .css_input_text{min-width:260px}#submit_group{clear:both;padding-top:10px}#hierarchy_selector{margin-top:5px}span.label_hierarchy_selector{min-width:initial;padding:7px;padding-right:30px;padding-top:10px}.css_operator_select{padding:2px;cursor:pointer;clear:both;width:100%;margin:0}.css_wrap_max_rows{width:12%}.section_buttons_container{margin-right:45px;padding-top:3px}/*# sourceMappingURL=area_thesaurus.css.map */
