--- a/core/page/css/layout/buttons.less
+++ b/core/page/css/layout/buttons.less
@@ -259,6 +259,11 @@
 		button&  { .fn_append_icon(@icon_name); }
 		.button& { .fn_add_mask(@icon_name); }
 	}
+	.arrow_link {
+		@icon_name : 'arrow_link.svg';
+		button&  { .fn_append_icon(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
+	}
 	.calendar {
 		@icon_name : 'calendar.svg';
 		button&  { .fn_append_icon(@icon_name); }
@@ -299,7 +304,11 @@
 		button&  { .fn_append_icon(@icon_name); }
 		.button& { .fn_add_mask(@icon_name); }
 	}
-
+	.compress {
+		@icon_name : 'compress.svg';
+		button&  { .fn_append_icon(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
+	}
 
 // .contenteditable_buttons (used by content editable)
 	.contenteditable_buttons {
@@ -349,5 +358,3 @@
 			}
 		}
 	}
-
-
