--- a/core/ts_object/css/ts_object.less
+++ b/core/ts_object/css/ts_object.less
@@ -85,13 +85,15 @@
 					*/
 					.ts_icons_all;
 					background-image: url(../../themes/default/icons/add.svg);					
-					padding: 6px;
+					// padding: 6px;
+
+					&:hover {
+						background-color: #B5A83A;		
+						filter: invert(100%);
+						border-radius: 3px;	
+					}
 				}
-				.ts_object_add_icon:hover {
-					background-color: #B5A83A;		
-					filter: invert(100%);
-					border-radius: 3px;	
-				}
+				
 
 				
 			
@@ -133,7 +135,7 @@
 					.ts_icons_all;
 					//background-image: url(../../themes/default/icon_delete.svg);
 					//background-size: 52%;
-					background-image: url(../../themes/default/icons/trash-o.svg);
+					background-image: url(../../themes/default/icons/trash.svg);
 					background-size: 76%;
 					margin-right: 2px;		
 					}
