--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -145,10 +145,22 @@
 		input.max_input {
 			border: none;
 			width: 100%;
-			height:100%;
+			height: 100%;
 			cursor: default;
 			text-align: center;
 			font-size: 1.2em;
+
+			&.is_thesaurus {
+				height:60%;
+			}
+		}
+
+		>.recursive_group {
+			// background-color: #38e79d;
+			height:40%;
+			// white-space: nowrap;
+			text-align: center;
+			line-height: 0.75em;
 		}
 	}
 
