--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1064,6 +1064,13 @@
 						>li {
 							z-index: inherit;
 
+							.create_fragment {
+								position: absolute;
+								right: 0;
+								bottom: 0;
+								box-shadow: 2px 2px 5px 0 rgba(38,38,38,.3);
+							}
+
 							.layer_selector {
 								width: 10em;
 								background-color: @color_orange_dedalo;
