--- a/lib/dedalo/tools/tool_sort/css/tool_sort.less
+++ b/lib/dedalo/tools/tool_sort/css/tool_sort.less
@@ -238,6 +238,12 @@ body {
 
 // row_container
 	.row_container {
+		.original{
+			background-color: #99ffaf;
+		}
+		.copy{
+			background-color: #f59696;
+		}
 
 	}
 
@@ -269,24 +275,24 @@ body {
 
 				background-color: rgba(249, 249, 249, 0.90);; // ?
 			}
-			>div:nth-child(-n+4){
+			>div:nth-child(-n+5){
 				grid-column-start: 1;
 			}
-			>div:nth-child(n+5){
+			>div:nth-child(n+6){
 				grid-row-start: 1;
 				grid-row-end: 5;
 			}
-			>div:nth-child(5){
+			>div:nth-child(6){
 				grid-column-start: 2;
 			}
-			>div:nth-child(6){
+			>div:nth-child(7){
 				grid-column-start: 3;
 			}
-			>div:nth-child(7){
+			>div:nth-child(8){
 				grid-column-start: 4;
 				grid-row-end: 3;
 			}
-			>div:nth-child(8){
+			>div:nth-child(9){
 				grid-column-start: 4;
 				grid-row-start: 3;
 			}
@@ -551,7 +557,7 @@ body {
 	.rows_container>.row_container {
 	    //grid-template-columns: 50px 50px 1fr 1fr 150px 150px 95px 75px;
 	    grid-template-columns: minmax(75px, 1fr) 160px 160px 85px;
-	    grid-template-rows: 1fr 1fr 1fr 1fr;
+	    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 	    >.column_cell {
 	    	//height: 100%;
 	    	//height: 100%;
