New widget state, it replace the compoent_state

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -954,6 +954,25 @@
 				}
 			}
 
+			// component_info
+			&.component_info {
+
+				>.content_data {
+					
+					.wrapper_widget {
+
+						.values_container > li {
+							label {
+								// &.before
+								padding-right: 0.5em;
+							}
+							.value {
+
+							}
+						}
+					}
+				}
+			}
 
 			// component_input_text
 			&.component_input_text {
