--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -20,7 +20,7 @@
 			}
 		}
 	}
-	
+
 
 // mixins
 
@@ -759,7 +759,7 @@
 		&.edit, &.search {
 			>.label {
 				height: @component_label_height;
-			} 
+			}
 			// content data defaults
 			>.content_data {
 				max-height: inherit;
@@ -878,13 +878,13 @@
 								// height: 100%;
 							}
 						}
-					}					
+					}
 				}
 			}
 
 			// component_image
 			&.component_image {
-				// @width_break_point_2				
+				// @width_break_point_2
 				>.content_data {
 					// Note that height is always the media min height (27em)
 					// (!) Not use max o min height here to avoid affect canvas reference size
@@ -908,7 +908,7 @@
 								max-height: 100%;
 								// width: 100%;
 								max-width: 100%;
-								
+
 								// on focus adds a soft shadow and outline
 								&:focus {
 									.hilite(-1px);
@@ -958,7 +958,7 @@
 			&.component_info {
 
 				>.content_data {
-					
+
 					.wrapper_widget {
 
 						.values_container > li {
@@ -968,6 +968,21 @@
 							}
 							.value {
 
+							}
+						}
+
+						&.state {
+							li.state {
+								display: grid;
+								grid-template-columns: 1fr 1fr 1fr;
+
+								>div {
+									display: contents;
+
+									.detail {
+										display: none;
+									}
+								}
 							}
 						}
 					}
@@ -1059,7 +1074,7 @@
 								padding: 0;
 								// height: 100%;
 								// max-height: 100%;
-								// max-width: 100%;					
+								// max-width: 100%;
 
 								height: 100%;
 								max-height: 100%;
@@ -1068,8 +1083,8 @@
 								object-position: center;
 							}
 						}
-					}					
-				}				
+					}
+				}
 			}
 
 			// component_text_area
@@ -1254,7 +1269,7 @@
     				}
 				}
 			}
-			
+
 
 			>.label {
 				// background-color: #FEDACF;
@@ -1950,7 +1965,7 @@
 		position: relative;
 		pointer-events: none !important;
 
-		>.wrapper_component {			
+		>.wrapper_component {
 			//opacity: 0.8;
 			//background-color: #F7B74C
 		}
@@ -1969,8 +1984,8 @@
 
 // preload
 	.preload {
-		//background-image: url(../../themes/default/icons/preload.svg);		
-		.fn_build_button('preload.svg', black, 1);		
+		//background-image: url(../../themes/default/icons/preload.svg);
+		.fn_build_button('preload.svg', black, 1);
 		mask-size: 30% !important;
    		 -webkit-mask-size: 30% !important;
 		min-height: 3em;
