Fix loader css issue on area_development

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1954,8 +1954,8 @@
 	.preload {
 		//background-image: url(../../themes/default/icons/preload.svg);
 		.fn_build_button('preload.svg', black, 1);
-		mask-size: 30% !important;
-   		 -webkit-mask-size: 30% !important;
+		// mask-size: 30% !important;
+   		 // -webkit-mask-size: 30% !important;
 		min-height: 3em;
 		min-width: 3em;
 		vertical-align: middle;
