Fix inspector issue on small screens

--- a/lib/dedalo/inspector/css/inspector.less
+++ b/lib/dedalo/inspector/css/inspector.less
@@ -6,10 +6,18 @@
 
 // inspector
 	#inspector_div {
-		display:block;
-		padding: 0px;
-		margin: 0px;
-		width: 98.2%;
+		display	: block;
+		padding	: 0px;
+		margin	: 0px;
+		width	: 98.2%;
+
+		// allow scroll on small screens
+		height		: 100%;
+		overflow	: auto;
+		padding-bottom: 6em;
+		
+
+
 		//position: fixed;	
 		//background-color: #4ce6e4;	
 		//width: 235px !important;
@@ -24,11 +32,11 @@
 		}
 
 		.css_section_group_content {
-			display: table;
+			display	: table;
 		}
 
 		.css_button_generic > span {
-			display: none;
+			display	: none;
 		}
 	}
 
